# discord-telegram-forwarder

./: .gitignore  Cargo.toml  README.md  example.config.yaml
.github/workflows/: rust.yml
src/: example.config.yaml  main.rs
src/cli/: cli.rs
src/config/: config.rs  lib.rs  mod.rs  models.rs  utils.rs
src/connector/: checker.rs  connector.rs  lib.rs  mod.rs
src/filter/: filter.rs
src/telegram/: telegram.rs
src/utils/: constants.rs  extensions.rs  mod.rs  storage.rs
