[package]
name = "discord-telegram-forwarder"
version = "0.1.0"
authors = ["Or <10655932+Orbsynated@users.noreply.github.com>"]
repository = "https://github.com/Orbsynated/discord-telegram-forwarder/"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
env_logger = "0.8.3"
log = "0.4.14"
serde = { version = "1.0.124", features = ["derive"] }
serde_yaml = "0.8.17"
tokio = { version = "1.3.0", features = ["full"] }
telegram-bot = "0.8.0"
futures = "0.3.13"
lazy_static = "1.4.0"


[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "gateway",
    "cache",
    "http",
    "model",
    "utils",
    "rustls_backend",
]
version = "0.10.4"


[dev-dependencies]
